@@ -3,7 +3,7 @@
 type                    = mysql_SGL
 host                    = localhost
 protocol                = false
-socket                  = 
+socket                  =
 port                    = 3306
 user                    = root
 pass                    =
@@ -35,6 +35,7 @@ wysiwygEditor           = tinyfck ;Available: tinyfck, fck, htmlarea, xinha
 extendedLocale          = false
 localeCategory          = 'LC_ALL'
 adminGuiTheme           = default_admin
+defaultTheme            = default
 
 [cookie]
 path                    = /
